Configuração de rotas

--- a/frontend/src/components/Main/styles.css
+++ b/frontend/src/components/Main/styles.css
@@ -5,7 +5,7 @@ main {
 }
 
 .inner-container {
-    width: 850px;
+    width: 90%;
     margin: 0 auto;
     margin-bottom: 20px;
 }
@@ -23,8 +23,6 @@ h1 {
     font-family: Poppins;
     font-size: 48px;
     color: rgb(228, 166, 86);
-
-    width: 900px;
     margin-bottom: 30px;
 }
 
@@ -34,3 +32,8 @@ p {
     line-height: 30px;
 }
 
+@media (max-width: 960px) {
+    .container.main {
+        max-width: 90vw;
+    }
+}
