--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -8,7 +8,13 @@ body {
     background: rgb(235, 235, 235);
 }
 
-p, span, li, button {
+main {
+    padding: 30px 20px;
+    background: #222;
+    border-radius: 5px;
+}
+
+p, span, li, a {
     color:  rgb(235, 235, 235);
 }
 
@@ -24,8 +30,20 @@ img {
     display: block;
 }
 
+
 .container {
     max-width: 960px;
     margin: 0 auto;
     display: flex;
+}
+
+.inner-container {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.container.main {
+    margin-top: 100px;
+    display: block;
 }
