--- a/frontend/src/components/Create/styles.css
+++ b/frontend/src/components/Create/styles.css
@@ -31,7 +31,13 @@ form input {
     width: 100%;
     outline: none;
     padding: 10px;
+    border: 3px solid #222;
     border-radius: 5px;
+    transition: border-color .5s ease;
+}
+
+form input:focus {
+    border-color: burlywood;
 }
 
 form input + label {
@@ -40,7 +46,7 @@ form input + label {
 }
 
 form button {
-    border: 1px solid rgb(235,235,235);
+    border: 2px solid rgb(235,235,235);
     border-radius: 5px;
     outline: none;
     background: #222;
@@ -60,8 +66,3 @@ form button:hover {
     border-color: burlywood;
     color: burlywood;
 }
-
-.container.main {
-    max-width: 720px;
-}
-
