--- a/frontend/src/components/Create/styles.css
+++ b/frontend/src/components/Create/styles.css
@@ -28,6 +28,11 @@ form label {
 
 form input {
     display: block;
+
+    background: #444;
+
+    color: rgb(235,235,235);
+
     width: 100%;
     outline: none;
     padding: 10px;
@@ -46,7 +51,7 @@ form input + label {
 }
 
 form button {
-    border: 2px solid rgb(235,235,235);
+    border: 2px solid #444;
     border-radius: 5px;
     outline: none;
     background: #222;
