--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -12,7 +12,7 @@ header {
     font-family: Poppins;
     text-transform: uppercase;
     font-size: 24px;
-    color: rgb(228, 166, 86);
+    color: var(--active-color);
 }
 
 .desktop-nav ul {
@@ -35,5 +35,5 @@ header {
 }
 
 .desktop-nav ul li a:hover {
-    color: burlywood;
+    color: var(--active-color);
 }
