--- a/frontend/src/pages/Read/styles.css
+++ b/frontend/src/pages/Read/styles.css
@@ -2,10 +2,10 @@
 .user-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin: 0 auto 15px auto;
     gap: 15px;
-    margin: 0 auto;
     margin-bottom: 15px;
-    width: 80%;
+    width: 90%;
 }
 
 .user-item {
